2005-01-06  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: minor editing.

	* Documentation/user/changing-defaults: minor editing.

	* Documentation/user/examples.itely: add template for
	string quartet part extraction; demonstrates tag.

2005-01-06  Erlend Aasland  <erlenda@gmail.com>

	* Documentation/user/notation.itely: documents
	format-mark-box-letters and format-mark-box-numbers

	* scm/define-context-properties.scm: change comment.

2005-01-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (output-classic-framework): new function:
	dump systems as separate .eps files (without fonts) and write a
	single collecting .tex file.

2005-01-05  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Setting simple songs):
	Correct several errors in the equivalent formulation of
	\addlyrics. 
	(The Lyrics context): Corrected link to the SATB example.

2005-01-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (completize-formats): new function
	(postprocess-output): new function

	* lily/paper-book.cc (classic_output): change calling
	convention. Give basename as first argument. 
	remove Paper_book::post_processing().

	* lily/lily-guile.cc (LY_DEFINE): ly:output-backend, new function.

2005-01-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/paper-outputter.cc (LY_DEFINE): new function
	ly:outputter-close.

	* lily/main.cc: change --format,-f to --backend,-b

	* lily/include/main.hh: rename format to backend.

	* scm/translation-functions.scm (format-mark-box-numbers): add.
	patch by Erlend Aasland

2005-01-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/pango-font.cc (text_stencil): dump string as
	(utf-8-string FONTDESC UTF8) for use in -f gnome, -f svg.

2005-01-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in (gui_b): Remove handy developer-only
	PKG_CONFIG_PATH settings that cater for Jan-and-Han-Wen ~/usr/pkg/