@@ -38,11 +38,6 @@ extern bool internal_type_checking_global_b;
 /*
   todo: collect in Output_option struct? 
  */
-extern bool make_png;
-extern bool make_dvi;
-extern bool make_ps;
-extern bool make_pdf;
-extern bool make_tex;
 extern String output_format_global;
 
 extern bool make_preview;
