@@ -1,3 +1,11 @@
+2005-01-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/font.scm (add-cmr-fonts): use real dimens in font selection.
+
+2005-01-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/dimensions.cc (LY_DEFINE): add ly:{inch,cm,mm,bp,pt}.
+
 2005-01-06  Graham Percival  <gperlist@shaw.ca>
 
 	* Documentation/user/notation.itely: minor editing.
